8/12/11 #3039, add Arrow.getHeadScale, use it to scale dipole cross
8/12/11 add cross to dipole by decorating arrow
8/11/11 cannibalize Vector2DNode for use in rewrite of DipoleNode
8/11/11 make TwoAtomsIsosurfaceNode observer atom locations, since those are the properties it relies on
8/11/11 rename "Test" control panel to "Electric Field"
8/11/11 first attempt at 2D isosurface
8/11/11 generalize molecule drag handler in MoleculeRotationHandler
8/11/11 add 3D perspective to E-field plates
8/10/11 restore "more" in bond type indicator
8/10/11 remove arrows and "more" from bond type indicator
8/10/11 Jmol: return status from developer scripts
8/10/11 adjust 2D dipoles to look more like Jmol dipoles
8/10/11 Jmol: swp atom labels so that they are numbered clockwise from upper left
8/10/11 Jmol: change atoms labels so that if there's only one atom of a type, it has no index (eg "C", not "C1")
8/9/11 Jmol: manually edit mol2 file for O3, swap y and z axes
8/9/11 Jmol: manually edit mol2 file for H2O, swap y and z axes, invert y axis
8/9/11 Jmol: manually edit mol2 file for CH2O, swap y and z axes, invert y axis, adjust labels
8/9/11 Jmol: manually edit mol2 orientation of atoms that involve swapping x and z axes, adjust labels
8/9/11 Jmol: manually edit atom names in mol2 files
8/9/11 Jmol: delete sdf and smol files, #3018
# 0.00.07 (54913) Aug 6, 2011
8/6/11 Jmol: execute scripts synchronously with JmolViewer.scriptWait, #3009
8/6/11 change Model control panel to Isosurface, with choices "none", "Electrostatic Potential", "Electron Density"
8/6/11 Jmol: add a proposed isosurface command for "electron density" view, for discussion
8/3/11 change request: add line separator between atom name and partial charge
8/3/11 change request: atom labels on by default
# 0.00.06 (54831) Aug 3, 2011
8/3/11 add molecule angle to Reset All
8/3/11 align two-atom molecule with E-field
8/2/11 change Bond.dipoleMagnitude to Bond.deltaElectronegativity, since this is really what it is