@@ -8,6 +8,7 @@ on=on
 off=off
 bondType=Bond Type
 partialCharges=Partial Charges
+bondDipole=Bond Dipole
 bondDipoles=Bond Dipoles
 molecularDipole=Molecular Dipole
 electronegativity=Electronegativity
